// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoadingIndicator /> renders properly with loading text 1`] = `
<Fragment>
  <WithStyles(ForwardRef(CircularProgress))
    color="inherit"
  />
   
  Loading text
</Fragment>
`;

exports[`<LoadingIndicator /> renders properly without loading text 1`] = `
<Fragment>
  <WithStyles(ForwardRef(CircularProgress))
    color="inherit"
  />
</Fragment>
`;
